--- a/src/home.css
+++ b/src/home.css
@@ -8,41 +8,77 @@
     box-sizing: border-box;
     text-decoration:none;
 }
+
 body {
 font size: 100%; 
+background-color: #F2edd7;
 }
+
 .cabecalho {
+    height: 80px;
     display: flex;
     flex direction: row;
     align-items: center;
     justify-content: space-around;
-    padding: 24px;
+    padding: 16px;
 }
+
 .cabecalho-imagem {
     height: 100px;
 }
+
 .cabecalho-menu {
     display: flex;
-    gap: 32px;
+    gap: 16px;
 }
+
 .cabecalho-menu-item {
     font-family: 'Suez One', serif;
-    color: #000000;
+    color: #473c38;
     font-weight: 400;
     font-size: 20px
 }
+
 .home {
     background-color: #97a857;
+    padding: 32px;
+    justify-content: space-around;
 }
+
 .home-inicio {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content:space-around
+
 }
+
 .home-inicio-apresentacao {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.home-inicio-escrito{
     font-family: 'Abril Fatface', serif;
     font-weight: 500;
     font-size: 75px;
-    color: #000000;
+    color: #473c38;
+}
+
+.home-inicio-botao {
+    background-color: #a6b98b;
+    width: 180px;
+    height: 80px;
+    border: none;
+    box-shadow: 5px 5px 5px #000000;
+    border-radius: 20px;
+    font-family: 'Suez One', serif;
+    font-weight: 400;
+    font-size: 30px;
+    color: #473c38;
+}
+
+.home-inicio-imagem {
+    height: 730px;
 }
