--- a/src/home.css
+++ b/src/home.css
@@ -1,26 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Suez+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Suez+One&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alata&family=Suez+One&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration:none;
+    letter-spacing: 1px;
 }
 
 body {
 font size: 100%; 
 background-color: #F2edd7;
+margin-top: 20px;
 }
 
 .cabecalho {
     height: 80px;
     display: flex;
-    flex direction: row;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 16px;
+    margin-left: 60px;
+    margin-right: 180px;
 }
 
 .cabecalho-imagem {
@@ -29,19 +33,20 @@ background-color: #F2edd7;
 
 .cabecalho-menu {
     display: flex;
-    gap: 16px;
+    gap: 30px;
 }
 
 .cabecalho-menu-item {
     font-family: 'Suez One', serif;
-    color: #473c38;
+    color: #000000;
     font-weight: 400;
     font-size: 20px
 }
 
 .home {
-    background-color: #97a857;
+    background-color: #F2edd7;
     padding: 32px;
+    margin-bottom: 32px;
     justify-content: space-around;
 }
 
@@ -49,36 +54,213 @@ background-color: #F2edd7;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content:space-around
+    justify-content:space-around;
 
 }
 
-.home-inicio-apresentacao {
-    display: flex;
+.home-apresentacao {
     flex-direction: column;
     gap: 32px;
 }
 
-.home-inicio-escrito{
+.home-escrito{
     font-family: 'Abril Fatface', serif;
     font-weight: 500;
     font-size: 75px;
-    color: #473c38;
+    color: #000000;
 }
 
-.home-inicio-botao {
-    background-color: #a6b98b;
-    width: 180px;
-    height: 80px;
+.home-botao {
+    background-color: #97a857;;
+    width: 250px;
+    height: 100px;
     border: none;
     box-shadow: 5px 5px 5px #000000;
     border-radius: 20px;
     font-family: 'Suez One', serif;
     font-weight: 400;
     font-size: 30px;
-    color: #473c38;
+    color: #000000;
 }
 
-.home-inicio-imagem {
+.home-imagem {
     height: 730px;
+    margin-bottom: 40px;
 }
+
+.pet {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 90px;
+    margin-top: 80px;
+}
+ .pet-titulo {
+    font-family: 'Suez One', serif;
+    color: #000000;
+    font-weight: 400;
+    font-size: 60px
+ }
+
+ .pet-botoes {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 40px;
+ }
+
+ .botao-perdi {
+    background-color: #97a857;;
+    width: 300px;
+    height: 100px;
+    border: none;
+    box-shadow: 4px 5px 4px #000000;
+    border-radius: 20px;
+    font-family: 'Abril Fatface', serif;
+    font-weight: 400;
+    font-size: 40px;
+    color: #000000;
+    margin-right: 80px;
+ }
+
+ .botao-achei {
+    background-color: #97a857;;
+    width: 300px;
+    height: 100px;
+    border: none;
+    box-shadow: 4px 5px 4px #000000;
+    border-radius: 20px;
+    font-family: 'Abril Fatface', serif;
+    font-weight: 400;
+    font-size: 40px;
+    color: #000000;
+ }
+
+ .relato-titulo {
+    text-align: center;
+    margin: 60px;
+    font-family: 'Abril Fatface', serif;
+    color: #000000;
+    font-weight: 400;
+    font-size: 45px
+ }
+
+ .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+ }
+
+ .relato1 .relato2 .relato3 {
+    display: flex;
+    justify-content: space-between;
+    width: 30px;
+    height: 30px;
+ }
+
+ .adocao {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 90px;
+    margin-top: 80px;
+    padding: 20px;
+ }
+
+ .adocao-titulo {
+    font-family: 'Abril Fatface', serif;
+    color: #000000;
+    font-weight: 400;
+    font-size: 60px
+ }
+
+ .adocao-botao {
+    background-color: #97a857;;
+    width: 500px;
+    height: 120px;
+    border: none;
+    box-shadow: 4px 5px 4px #000000;
+    border-radius: 20px;
+    font-family: 'Abril Fatface', serif;
+    font-weight: 400;
+    font-size: 40px;
+    color: #000000;
+    margin-bottom: 100px;
+ }
+
+ body, h1, h2, h3, p, ul, li {
+    margin: 0;
+    padding: 0;
+}
+
+.footer {
+    background-color: #f0f0f0;
+    padding: 20px;
+    text-align: center;
+    font-family: 'Alata', sans-serif;
+}
+
+.footer-contatos {
+    margin-bottom: 20px;
+}
+
+.footer-contatos img {
+    width: 80px; 
+    height: auto;
+}
+
+.footer-contatos h5 {
+    margin-top: 10px;
+    font-size: 18px;
+}
+
+.footer-redes {
+    margin-top: 10px;
+}
+
+.redes-link {
+    margin: 0 5px;
+    text-decoration: none;
+}
+
+.footer-lista {
+    list-style: none;
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-lista li {
+    margin-bottom: 10px;
+}
+
+.footer-link {
+    text-decoration: none;
+    color: #333;
+}
+
+#footer-email {
+    margin-top: 20px;
+}
+
+#input-group {
+    margin-top: 10px;
+}
+
+#email {
+    padding: 5px;
+}
+
+button {
+    background-color: #5f7161;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+#footer-copyright {
+    margin-top: 20px;
+    font-size: 14px;
+    color: #777;
+}
+
