--- a/src/home.css
+++ b/src/home.css
@@ -12,8 +12,7 @@
 
 body {
 font size: 100%; 
-background-color: #F2edd7;
-margin-top: 20px;
+background-color: #FCFFF8;
 }
 
 .cabecalho {
@@ -23,30 +22,36 @@ margin-top: 20px;
     align-items: center;
     justify-content: space-between;
     padding: 16px;
-    margin-left: 60px;
-    margin-right: 180px;
+    margin: 2%;
 }
 
 .cabecalho-imagem {
-    height: 100px;
+    width: 120px;
+    height: auto;
 }
 
 .cabecalho-menu {
     display: flex;
-    gap: 30px;
+    gap: 15px;
 }
 
 .cabecalho-menu-item {
     font-family: 'Suez One', serif;
-    color: #000000;
+    color: #181918;
     font-weight: 400;
-    font-size: 20px
+    font-size: 20px;
+    transition: color 0.3s;
+}
+
+.cabecalho-menu-item:hover {
+    color: #5f7161;
+    border-bottom: 2px solid #5f7161;
 }
 
 .home {
-    background-color: #F2edd7;
+    background-color: #FCFFF8;
     padding: 32px;
-    margin-bottom: 32px;
+    margin-bottom: 16px;
     justify-content: space-around;
 }
 
@@ -55,6 +60,7 @@ margin-top: 20px;
     flex-direction: row;
     align-items: center;
     justify-content:space-around;
+    margin-bottom: 5%;
 
 }
 
@@ -67,15 +73,16 @@ margin-top: 20px;
     font-family: 'Abril Fatface', serif;
     font-weight: 500;
     font-size: 75px;
-    color: #000000;
+    color: #181918;
+    max-width: 1000px;
 }
 
 .home-botao {
-    background-color: #97a857;;
+    margin-top: 20px;
+    background-color: #97a97c;;
     width: 250px;
     height: 100px;
-    border: none;
-    box-shadow: 5px 5px 5px #000000;
+    border: 2px solid #000000;
     border-radius: 20px;
     font-family: 'Suez One', serif;
     font-weight: 400;
@@ -83,9 +90,14 @@ margin-top: 20px;
     color: #000000;
 }
 
-.home-imagem {
-    height: 730px;
-    margin-bottom: 40px;
+.home-botao:hover {
+    background: #c6d8ad;
+    color: #fcfff8;
+}
+
+.home-inicio-imagem {
+    width: 750px;
+    height: auto;
 }
 
 .pet {
@@ -93,11 +105,13 @@ margin-top: 20px;
     flex-direction: column;
     align-items: center;
     gap: 90px;
-    margin-top: 80px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    padding: 20px;
 }
  .pet-titulo {
     font-family: 'Suez One', serif;
-    color: #000000;
+    color: #181918;
     font-weight: 400;
     font-size: 60px
  }
@@ -109,54 +123,91 @@ margin-top: 20px;
  }
 
  .botao-perdi {
-    background-color: #97a857;;
+    background-color: #97a97c;
     width: 300px;
     height: 100px;
-    border: none;
-    box-shadow: 4px 5px 4px #000000;
+    border: 2px solid #000000;
     border-radius: 20px;
     font-family: 'Abril Fatface', serif;
     font-weight: 400;
     font-size: 40px;
-    color: #000000;
+    color: #181918;
     margin-right: 80px;
  }
 
  .botao-achei {
-    background-color: #97a857;;
+    background-color: #97a97c;
     width: 300px;
     height: 100px;
-    border: none;
-    box-shadow: 4px 5px 4px #000000;
+    border: 2px solid #000000;
     border-radius: 20px;
     font-family: 'Abril Fatface', serif;
     font-weight: 400;
     font-size: 40px;
-    color: #000000;
+    color: #181918;
+ }
+
+ .botao-perdi:hover,
+ .botao-achei:hover {
+    background: #c6d8ad;
+    color: #fcfff8;
+ }
+
+ .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 50px;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+ }
+
+.container .relato1,
+.container .relato2,
+.container .relato3,
+.container .relato4,
+.container .relato5 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+ .container img {
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+    border-radius: 50%;
+    border: 5px solid #5f7161;
+    margin-bottom: 20px;
  }
 
  .relato-titulo {
+    margin-bottom: 100px;
     text-align: center;
-    margin: 60px;
     font-family: 'Abril Fatface', serif;
-    color: #000000;
+    color: #181918;
     font-weight: 400;
     font-size: 45px
  }
 
- .container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
+.relato1 p,
+.relato2 p,
+.relato3 p,
+.relato4 p,
+.relato5 p {
+    font-weight: bold; 
+    font-size: 26px; 
  }
 
- .relato1 .relato2 .relato3 {
-    display: flex;
-    justify-content: space-between;
-    width: 30px;
-    height: 30px;
- }
+.relato1 span,
+.relato2 span,
+.relato3 span,
+.relato4 span,
+.relato5 span {
+    margin-top: 20px;
+    font-size: 20px; 
+}
 
  .adocao {
     display: flex;
@@ -165,28 +216,34 @@ margin-top: 20px;
     gap: 90px;
     margin-top: 80px;
     padding: 20px;
+    margin-top: 50px;
  }
 
  .adocao-titulo {
     font-family: 'Abril Fatface', serif;
-    color: #000000;
+    color: #181918;
     font-weight: 400;
     font-size: 60px
  }
 
  .adocao-botao {
-    background-color: #97a857;;
+    background-color: #97a97c;
     width: 500px;
     height: 120px;
-    border: none;
-    box-shadow: 4px 5px 4px #000000;
+    border: 2px solid #000000;
     border-radius: 20px;
     font-family: 'Abril Fatface', serif;
     font-weight: 400;
     font-size: 40px;
     color: #000000;
-    margin-bottom: 100px;
+    margin-top: 30px;
+    margin-bottom: 200px;
  }
+
+.adocao-botao:hover {
+    background: #c6d8ad;
+    color: #fcfff8;
+}
 
  body, h1, h2, h3, p, ul, li {
     margin: 0;
@@ -194,14 +251,13 @@ margin-top: 20px;
 }
 
 .footer {
-    background-color: #f0f0f0;
+    display: flex;
+    background-color: #dce1d4;
     padding: 20px;
     text-align: center;
     font-family: 'Alata', sans-serif;
-}
-
-.footer-contatos {
-    margin-bottom: 20px;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .footer-contatos img {
@@ -215,8 +271,13 @@ margin-top: 20px;
 }
 
 .footer-redes {
-    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    font-size: 25px;
 }
+
 
 .redes-link {
     margin: 0 5px;
@@ -226,36 +287,27 @@ margin-top: 20px;
 .footer-lista {
     list-style: none;
     display: inline-block;
-    margin-right: 20px;
-}
-
-.footer-lista li {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .footer-link {
     text-decoration: none;
     color: #333;
+    margin-bottom: 20px;
 }
 
-#footer-email {
-    margin-top: 20px;
-}
-
-#input-group {
-    margin-top: 10px;
-}
-
-#email {
-    padding: 5px;
+.footer-lista:hover,
+.footer-link:hover {
+    color: #5f7161;
+    border-bottom: 2px solid #5f7161;
 }
 
 button {
+    margin-top: 15px;
     background-color: #5f7161;
     color: #fff;
-    border: none;
+    border: 2px solid #000000;
     padding: 5px 10px;
-    cursor: pointer;
 }
 
 #footer-copyright {
