--- a/src/home.css
+++ b/src/home.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Suez+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Suez+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alata&family=Suez+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alata&family=Suez+One&display=swap');
 
 * {
     margin: 0;
@@ -35,17 +33,27 @@ background-color: #FCFFF8;
     gap: 15px;
 }
 
-.cabecalho-menu-item {
-    font-family: 'Suez One', serif;
+.cabecalho-menu {
+    font-family: 'Alata', sans-serif;
     color: #181918;
     font-weight: 400;
     font-size: 20px;
     transition: color 0.3s;
 }
 
-.cabecalho-menu-item:hover {
+.cabecalho-menu-item1:hover,
+.cabecalho-menu-item2:hover,
+.cabecalho-menu-item3:hover,
+.cabecalho-menu-item4:hover {
     color: #5f7161;
     border-bottom: 2px solid #5f7161;
+}
+
+.cabecalho-menu-item1:visited,
+.cabecalho-menu-item2:visited,
+.cabecalho-menu-item3:visited,
+.cabecalho-menu-item4:visited {
+    color: #5f7161;
 }
 
 .home {
@@ -70,7 +78,7 @@ background-color: #FCFFF8;
 }
 
 .home-escrito{
-    font-family: 'Abril Fatface', serif;
+    font-family: 'Suez One', serif;
     font-weight: 500;
     font-size: 75px;
     color: #181918;
@@ -84,7 +92,7 @@ background-color: #FCFFF8;
     height: 100px;
     border: 2px solid #000000;
     border-radius: 20px;
-    font-family: 'Suez One', serif;
+    font-family: 'Alata', sans-serif;
     font-weight: 400;
     font-size: 30px;
     color: #000000;
@@ -128,7 +136,7 @@ background-color: #FCFFF8;
     height: 100px;
     border: 2px solid #000000;
     border-radius: 20px;
-    font-family: 'Abril Fatface', serif;
+    font-family: 'Alata', sans-serif;
     font-weight: 400;
     font-size: 40px;
     color: #181918;
@@ -141,7 +149,7 @@ background-color: #FCFFF8;
     height: 100px;
     border: 2px solid #000000;
     border-radius: 20px;
-    font-family: 'Abril Fatface', serif;
+    font-family: 'Alata', sans-serif;
     font-weight: 400;
     font-size: 40px;
     color: #181918;
@@ -185,7 +193,7 @@ background-color: #FCFFF8;
  .relato-titulo {
     margin-bottom: 100px;
     text-align: center;
-    font-family: 'Abril Fatface', serif;
+    font-family: 'Suez One', serif;
     color: #181918;
     font-weight: 400;
     font-size: 45px
@@ -199,7 +207,7 @@ background-color: #FCFFF8;
     font-weight: bold; 
     font-size: 26px; 
  }
-
+ 
 .relato1 span,
 .relato2 span,
 .relato3 span,
@@ -209,6 +217,13 @@ background-color: #FCFFF8;
     font-size: 20px; 
 }
 
+.relato1:hover,
+.relato2:hover,
+.relato3:hover,
+.relato4:hover,
+.relato5:hover {
+    color: #97a97c;
+}
  .adocao {
     display: flex;
     flex-direction: column;
@@ -220,7 +235,7 @@ background-color: #FCFFF8;
  }
 
  .adocao-titulo {
-    font-family: 'Abril Fatface', serif;
+    font-family: 'Suez One', serif;
     color: #181918;
     font-weight: 400;
     font-size: 60px
@@ -232,7 +247,7 @@ background-color: #FCFFF8;
     height: 120px;
     border: 2px solid #000000;
     border-radius: 20px;
-    font-family: 'Abril Fatface', serif;
+    font-family: 'Alata', sans-serif;
     font-weight: 400;
     font-size: 40px;
     color: #000000;
