--- a/src/feed.css
+++ b/src/feed.css
@@ -51,11 +51,15 @@
     background-color: #5f7161;
 }
 
+.container-page {
+    max-width: 1400px;
+    margin: 0 auto 100px;
+}
+
 .titulo {
     margin-top: 7%;
     display: flex;
     flex-direction: column;
-    margin-left: 20px;
 }
 
 .titulo h1 {
@@ -71,7 +75,6 @@
     margin-top: 7%;
     display: flex;
     flex-direction: column;
-    margin-left: 20px;
 }
 
 .botao-anunciar p {
@@ -81,7 +84,7 @@
 }
 
 .botao-link {
-    width: 10%;
+    width: 15%;
     display: inline-block;
     border: 1px solid #000000;
     background-color: #c6d8ad;
@@ -98,8 +101,10 @@
 .filtro {
     display: flex;
     flex-direction: row;
-    margin-top: 4rem;
-    margin-left: 20px;
+    width: 100%;
+    justify-content: space-between;
+    margin: 20px 0 40px 0;
+    align-items: center;
 }
 
 .filtro label[for="situacao"],
@@ -126,43 +131,50 @@
     border: none;
     border-radius: 8px;
     box-shadow: 1px 1px 6px #0000001c;
+    height: 23px;
 }
 
 .filtro button {
-    margin-left: 2rem;
     border: 1px solid #000000;
-    padding: 3px;
     background-color: #97a97c;
     border-radius: 5px;
     cursor: pointer;
     font-family: 'Alata', sans-serif;
+    color: #000000;
     text-decoration: none;
 }
 
 .box-container {
-    max-width: 25%;
     display: flex;
     flex-wrap: wrap;
-    margin-top: 100px;
-    align-items: center;
-    margin-bottom: 150px;
 }
 
-.box-container img {
-    max-width: 25%;
-    height: auto;
-    border: 3px solid #5f7161;
-    border-radius: 6%;
-}
-
-.box-container p {
-    font-family: 'Alata', sans-serif;
-    font-size: 100%;
-    margin-bottom: 10%;
-    width: 60%;
-    overflow-wrap: break-word;
+.box-item {
+    background-color: #cedfb5;
+    flex: 0 0 23%;
+    margin: 10px;
     text-align: center;
-    margin-left: 20%;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid #000000;
+    border-radius: 8px;
+}
+
+.box-item img {
+    width: 100%;
+    height: auto;
+    max-height: 200px;
+    max-width: 100%;
+    display: flex;
+}
+
+.box-item p {
+    font-family: 'Alata', sans-serif;
+    font-size: 14px;
+    margin: 10px 0;
+    overflow-wrap: break-word;
+    flex-grow: 1;
+
 }
 
 .footer {
@@ -212,18 +224,21 @@
     margin-bottom: 20px;
 }
 
-.footer-lista:hover,
-.footer-link:hover {
+.footer-lista a:hover {
     color: #5f7161;
     border-bottom: 2px solid #5f7161;
 }
 
-button {
+.footer-botao {
     margin-top: 15px;
     background-color: #5f7161;
     color: #fff;
     border: 2px solid #000000;
     padding: 5px 10px;
+}
+
+.footer p {
+    margin-bottom: 10px;
 }
 
 #footer-copyright {
