--- a/src/home.css
+++ b/src/home.css
@@ -77,6 +77,11 @@ background-color: #FCFFF8;
     gap: 32px;
 }
 
+.home-apresentacao p {
+    font-family: 'Alata', sans-serif;
+    font-size: 25px;
+ }
+
 .home-escrito{
     font-family: 'Suez One', serif;
     font-weight: 500;
@@ -116,43 +121,35 @@ background-color: #FCFFF8;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 90px;
+    gap: 20px;
     margin-top: 100px;
     margin-bottom: 100px;
     padding: 20px;
 }
- .pet-titulo {
+
+.pet p {
+    font-family: 'Alata', sans-serif;
+    font-size: 25px;
+}
+
+.pet-titulo {
     font-family: 'Suez One', serif;
     color: #181918;
     font-weight: 400;
     font-size: 60px
  }
 
- .pet-botoes {
+.pet-botoes {
     flex-direction: row;
     justify-content: space-between;
     padding: 40px;
 
  }
 
- .botao-perdi {
+.botao {
     background-color: #97a97c;
     width: 300px;
-    height: 100px;
-    border: 2px solid #000000;
-    border-radius: 20px;
-    font-family: 'Alata', sans-serif;
-    font-size: 40px;
-    color: #181918;
-    margin-right: 80px;
-    text-align: center;
-    display: inline-block;
- }
-
- .botao-achei {
-    background-color: #97a97c;
-    width: 300px;
-    height: 100px;
+    height: 125px;
     border: 2px solid #000000;
     border-radius: 20px;
     font-family: 'Alata', sans-serif;
@@ -160,15 +157,14 @@ background-color: #FCFFF8;
     color: #181918;
     text-align: center;
     display: inline-block;
- }
+}
 
- .botao-perdi:hover,
- .botao-achei:hover {
+.botao:hover {
     background: #c6d8ad;
     color: #fcfff8;
  }
 
- .container {
+.container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 50px;
@@ -188,7 +184,7 @@ background-color: #FCFFF8;
     text-align: center;
 }
 
- .container img {
+.container img {
     width: 100%;
     max-width: 500px;
     height: auto;
@@ -197,7 +193,7 @@ background-color: #FCFFF8;
     margin-bottom: 20px;
  }
 
- .relato-titulo {
+ .relato-titulo h3 {
     margin-bottom: 100px;
     text-align: center;
     font-family: 'Suez One', serif;
@@ -235,20 +231,25 @@ background-color: #FCFFF8;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 90px;
+    gap: 20px;
     margin-top: 80px;
     padding: 20px;
     margin-top: 50px;
  }
 
- .adocao-titulo {
+.adocao p {
+    font-family: 'Alata', sans-serif;
+    font-size: 25px;
+}
+
+.adocao-titulo {
     font-family: 'Suez One', serif;
     color: #181918;
     font-weight: 400;
     font-size: 60px
  }
 
- .adocao-botao {
+.adocao-botao {
     background-color: #97a97c;
     width: 500px;
     height: 120px;
@@ -266,11 +267,6 @@ background-color: #FCFFF8;
 .adocao-botao:hover {
     background: #c6d8ad;
     color: #fcfff8;
-}
-
- body, h1, h2, h3, p, ul, li {
-    margin: 10px;
-    padding: 0;
 }
 
 .footer {
@@ -330,6 +326,10 @@ background-color: #FCFFF8;
     color: #fff;
     border: 2px solid #000000;
     padding: 5px 10px;
+}
+
+.footer p {
+    margin-bottom: 10px;
 }
 
 #footer-copyright {
